[package]
name = "interactive-voronoi"
version = "0.2.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
keywords = []
license = "MIT"
edition = "2021"

[[bin]]
name = "interactive-voronoi"
path = "src/main.rs"

[dependencies]
piston = "0.53"
piston2d-opengl_graphics = "0.82"
piston2d-graphics = "0.43"
piston2d-touch_visualizer = "0.33"
piston_window = "0.127"
delaunay2d = "0.0.2"
rand = "0.8"
getopts = "0.2"
serde_json = "1.0"
